[package]
name = "rs-klc"
version = "0.1.3"
edition = "2021"
description = "A library for converting between Korean Solar and Lunar dates, calculating Gapja (간지), and day of the week."
license = "MIT"
readme = "README.md"
repository = "https://github.com/chunghha/rs-klc.git"
keywords = ["lunar", "solar", "calendar", "korean", "gapja"]
categories = ["date-and-time"]

[dependencies]
