[package]
name = "rs-klc"
version = "0.2.0"
edition = "2024"
description = "A library for converting between Korean Solar and Lunar dates, calculating Gapja (간지), and day of the week."
license = "MIT"
readme = "README.md"
repository = "https://github.com/chunghha/rs-klc.git"
keywords = ["lunar", "solar", "calendar", "korean", "gapja"]
categories = ["date-and-time"]

[dependencies]
